# PJATK_ZUM_NLP

./: Makefile  README.md  main.ipynb  pyproject.toml
scripts/: get_tweets.py
